[package]
name = "lighthouse"
version = "0.1.0"
authors = ["root"]

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"

[dependencies]
sodiumoxide = "0.2"
mio = "0.6"
rustyline = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
